frontend/src/app/modules/policy-engine/policy-viewer/policy-viewer/policy-viewer.component.scss
/* ... */
@media screen and (max-width: 810px) {
    .policy-additional-info-container {
        display: none !important;
    }
}

:host ::ng-deep .content {
    right: inherit !important;
    min-width: 100% !important;
}

.dry-run-action-btn[disabled="true"],
.dry-run-group-btn[disabled="true"],
.dry-run-action-btn[aria-disabled="true"],
.dry-run-group-btn[aria-disabled="true"] {
    filter: grayscale(1);
    opacity: 0.7;
    cursor: not-allowed;
}

.dry-run-action-btn[aria-disabled="true"],
.dry-run-group-btn[aria-disabled="true"] {
    pointer-events: auto;
}

.dry-run-action-btn[aria-disabled="true"]:hover,
.dry-run-group-btn[aria-disabled="true"]:hover,
.dry-run-action-btn[disabled="true"]:hover,
.dry-run-group-btn[disabled="true"]:hover {
    border: 1px solid var(---color-color-grey-white, #FFF);
    background: var(--color-color-grey-white, #FFF);
}

.step-container {
    height: calc(100% - 66px) !important;
}

.no-step-container {}

.policy-container-body {
    width: 100%;
    height: 100%;
    // overflow: auto;
}

.policy-body {
    height: 100%;
    width: 100%;
    overflow: hidden;
}

.policy-settings-button {
    padding: 6px 16px;
}

.mock-tabs-nav {
    margin-bottom: 16px;

    ::ng-deep {
        .p-tabs .p-tablist-tab-list {
            li:first-child {
                margin-left: 8px !important;
            }
        }
    }
}

.mock-grid-container {
    height: calc(100vh - 380px);
    overflow: auto;
}

.input-document-edit {
    width: 40px;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: 16px;
    min-width: 40px;

    button {
        width: 32px;
        height: 32px;
    }
}


.input-document-open {
    width: 40px;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: 0px;
    min-width: 40px;
    margin-right: 4px;
    margin-left: 8px;

    button {
        width: 32px;
        height: 32px;
    }
}

.add-doc-btn {
    min-height: 28px;
    margin-top: 16px;
    margin-bottom: 8px;
}

.mock-actions-buttons-container {
    height: 40px;
    margin-bottom: 16px;
    display: flex;
    justify-content: end;
    gap: 16px;

    .guardian-button {
        min-width: 105px;
        padding: 1px 12px 1px 6px;
    }
}

.mock-toggle {
    display: flex;
    align-items: center;

    input {
        display: none;
    }

    .toggleSwitch {
        display: flex;
        align-items: center;
        justify-content: center;
        position: relative;
        width: 50px;
        height: 26px;
        background-color: var(--guardian-grey-background, #E1E7EF);
        border-radius: 20px;
        cursor: pointer;
        transition-duration: .2s;
        margin-right: 8px;
        border: 1px solid #afafaf;
    }

    .toggleSwitch::after {
        content: "";
        position: absolute;
        height: 10px;
        width: 10px;
        left: 5px;
        background-color: var(--guardian-background, #fff);
        border-radius: 50%;
        transition-duration: .2s;
        box-shadow: 5px 2px 7px rgba(8, 8, 8, 0.26);
        border: 5px solid #fff;
    }

    input:checked+.toggleSwitch::after {
        transform: translateX(100%);
        transition-duration: .2s;
        background-color: var(--guardian-background, white);
    }

    input:checked+.toggleSwitch {
        background-color: var(--guardian-primary-color, #4169E2);
        transition-duration: .2s;
    }
}

.mock-config-toggle {
    margin-top: 16px;
    height: 32px;
    display: flex;
    justify-content: end;

    button {
        width: 100px;
    }
}

.mock-config-container {
    padding: 16px;
}

.col-toolbar {
    justify-content: end;
}

.dialog-grid-body {
    background: var(--guardian-background, #fff);
}

.grid-row-header {
    font-weight: 600 !important;
    color: var(--color-grey-black-1) !important;
    background-color: var(--color-grey-3, #E1E7EF) !important;
    align-items: center !important;
    padding-left: 20px !important;
    border-top: 1px solid var(--color-grey-4, #b0b5ba) !important;

    .guardian-collapse {
        width: 24px !important;
        padding: 0 !important;
        margin-right: 8px !important;
    }

    &:first {
        border-top: none !important;
    }


    &:first-child {
        border-top: none !important;
    }

    span {
        font-weight: normal;
        font-size: 0.85em;
        color: var(--color-grey-5);
        margin-left: 16px;
    }
}

.col-auto {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

